--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,23 @@
-
+.table-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+  }
+  
+  .button-container {
+    display: flex;
+    width: 7rem;
+    height: 4rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .reset-button {
+    margin-top: 0.5rem;
+    width: 100%;
+    height: 50%;
+    
+  }
